--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ a {
 }
 
 .nav__brand {
-  align-items: center;
 }
 
 .nav__list {
@@ -52,14 +51,10 @@ a {
   transition: color 0.3s;
 }
 
-/* Icons */
-.icon {
-  width: 40px;
-  height: 40px;
-}
-
-.icon--white {
-  fill: #fff;
+.nav__toggler {
+  opacity: 0.5;
+  transition: box-shadow 0.15s;
+  cursor: pointer;
 }
 
 /* Collapsibles */
@@ -73,4 +68,38 @@ a {
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
+}
+
+.nav.collapsible--expanded .nav__toggler {
+  opacity: 1;
+  box-shadow: 0 0 0 3px #666;
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__toggler {
+    display: none;
+  }
+
+  .nav__list {
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+    max-height: 100%;
+    opacity: 1;
+  }
+
+  .nav__item {
+    border: 0;
+  }
+}
+
+/* Icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--white {
+  fill: #fff;
 }
